--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -309,8 +309,8 @@ newsc.selection = Confirm your setup selections...
 newsc.list.summary = Summary list of site settings.
 newsc.please = Please review the following information about your workspace.
 newsc.ifthis = If this information is correct, click Request Site.
-newsc.ifthis2 = If this information is correct, click Create Site.
-newsc.ifyou = If you need to make changes, click the Back button at the bottom of the page. To make changes to this setup later, go to Info within your site.
+newsc.ifthis2 = If this information is correct, click Create for New.
+newsc.ifyou = If you need to make changes, click the Back button at the bottom of the page. To make changes to this setup later, go to Info.
 newsc.youare = You are setting up a class site that includes the following class/sections:
 newsc.site = Title
 newsc.url = URL
@@ -322,7 +322,7 @@ newsc.short.none=No short description provided
 newsc.tools = Tools
 newsc.avail = Available To
 newsc.sitecan = Site can be joined by anyone with authorization to log in
-newsc.sitepart = Site participants only
+newsc.sitepart = Workspace participants only
 newsc.siteown = Site owner and organizers
 newsc.visible = Included on public index:
 newsc.yes = Yes
@@ -598,7 +598,7 @@ sitegen.siteinfolist.anon = Anyone (including non-logged in users) and site part
 sitegen.siteinfolist.anonjoin = Anyone (including non-logged in users), site participants and joinable by any logged in user
 sitegen.siteinfolist.auth = Logged in users and site participants
 sitegen.siteinfolist.authjoin = Logged in users, site participants and joinable by any logged in user.
-sitegen.siteinfolist.iclu = Included on public index of sites
+sitegen.siteinfolist.iclu = Included on public index
 sitegen.siteinfolist.yes = Yes
 sitegen.siteinfolist.no = No
 sitegen.siteinfolist.crea = Creation date
@@ -710,7 +710,7 @@ ediacc.dismysit.h.a 	= (Tell me more...)
 ediacc.disdraft		= Draft site can only be accessible by site maintainers
 ediacc.gloacc       = Global Access
 ediacc.plesel       = Please select a role:
-ediacc.pri          = Do not display in Site Browser
+ediacc.pri          = Do not display in workspace Browser
 ediacc.pubsit       = <strong>Published</strong> - immediately available to all participants
 ediacc.unpubsit	    = <strong>Unpublished</strong> - accessible only to owned maintainers
 ediacc.status       = Site Status
@@ -733,7 +733,7 @@ ediacc.startdate    = Publish Date/Time:
 ediacc.enddate      = Unpublish Date/Time: 
 ediacc.defaultdate  = Default
 ediacc.cleardate    = Clear
-ediacc.leaveblank   = Leave the Unpublish Date/Time box blank if you want the site never to be unpublished.
+ediacc.leaveblank   = Leave the Unpublish Date/Time box blank to keep the workspace published indefinitely.
 ediacc.errorblank   = The Publish Date/Time cannot be left blank for Scheduled publishing.
 ediacc.errorparse   = There is a problem with one of the Schedule dates you have added; please try again.
 ediacc.errorafter   = The Unpublishing date cannot be set before the Publishing date. 
@@ -744,7 +744,7 @@ ediacc.rolforpep    = Role for people that join site:
 ediacc.other.setsitacc    = Access
 ediacc.sitsta       = Site Status
 ediacc.upd          = Update
-ediacc.yousitcan    = In addition to the participants you've added, you can open your site so that anyone with a valid login can join it.
+ediacc.yousitcan    = In addition to the participants you've added, you can open your workspace so that anyone with a valid login can join it.
 ediacc.yousitcan.warn = Important: People who join your site can access the materials on your site. Sites with sensitive materials should not be made joinable.
 
 ediacc.addit        = Additional Access
